# CavrianaCorr

./: .gitignore  .pre-commit-config.yaml  03-01-1569.xml  1569-01-03.xml  1569-11-29.xml  1569-12-21.xml  1570-04-18.xml  1570-05-20.xml  1570-07-15.xml  1570-07-29.xml  1570-08-17-2.xml  1570-08-17.xml  1570-09-01.xml  1570-09-11.xml  1570-09-14.xml  1570-10-11.xml  1570-11-02-b.xml  1570-11-02.xml  1571-04-18.xml  1588-03-24.xml  19-02-1569.xml  CavrianaCarteggio copy.numbers  CavrianaCarteggio.numbers  CavrianaHeatmap.jsx  Makefile  ODD_CavrianaCorr.xml  Palette.xml  README.md  TEI_ENCODING_REPORT.md  TEI_TEMPLATE.xml  docusaurus_example.md  heatmap_README.md  install_heatmap_frontend.sh  letter_metadata.csv  persNames.xml  placeNames.xml  pyproject.toml  rarechar.md  requirements.txt  transform.xml  (+1 more)
assets/: cavriana-heatmap.css
docs/: SCRIPTS.md  custom_heatmap.md  heatmap_README.md  rarechar.md
letters/: 1563-04-06.xml  1566-12-31.xml  1568-04-06.xml  1568-04-28.xml  1568-05-04.xml  1568-05-05.xml  1568-05-28.xml  1568-06-09.xml  1568-07-03.xml  1568-07-24.xml  1568-09-07.xml  1569-01-03.xml  1569-03-11.xml  1569-11-29.xml  1569-12-09.xml  1569-12-21.xml  1569-12-31.xml  1570-02-06.xml  1570-03-20.xml  1570-03-30.xml  1570-04-18.xml  1570-05-20.xml  1570-05-30.xml  1570-07-15.xml  1570-07-29-b.xml  1570-07-29.xml  1570-08-08-b.xml  1570-08-08-c.xml  1570-08-08.xml  1570-08-17.xml  1570-08-27.xml  1570-09-01.xml  1570-09-09.xml  1570-09-11.xml  1570-09-14.xml  1570-09-24.xml  1570-10-03.xml  1570-10-09.xml  1570-10-11.xml  1570-10-13.xml  (+87 more)
templates/: transform.xsl  (+2 more)
(+27 files in other folders)
